[package]
name = "ektoboat"
version = "0.1.0"
authors = ["Martin Milata <martin@martinmilata.cz>"]
description = "a boat for carrying music"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# arg parser
clap = "~2.33.0"

# logging
stderrlog = "0.4.3"
log = "0.4.8"

# youtube
google-youtube3 = "1.0.10"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"
# yup-hyper-mock = "2.0.0"
